--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "product-microservice"]
 	path = product-microservice
 	url = https://github.com/Nest-MicroserviceMG/product-microservice.git
+[submodule "order-microservice"]
+	path = order-microservice
+	url = https://github.com/Nest-MicroserviceMG/order-microservice.git
+[submodule "gateway-microservices"]
+	path = gateway-microservices
+	url = https://github.com/Nest-MicroserviceMG/gateway-microservices.git
